# droidkit

./: README.md  index.html  package.json  settings.html  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
src/: App.tsx  base.tsx  main.css  main.tsx  tauri-commands.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: adb_commands.rs  emulator.rs  lib.rs  main.rs  server.rs  system_info.rs  utils.rs
src-tauri/src/adb_commands/: device.rs  discovery.rs  files.rs  logcat.rs  mod.rs  packages.rs  pairing.rs
src/components/: AppManager.tsx  AppSidebar.tsx  DeviceList.tsx  FileExplorer.tsx  Header.tsx  LogcatViewer.tsx  MainContent.tsx  PairingDialog.tsx  SettingsDialog.tsx  Sidebar.tsx  StatusBar.tsx  ThemeProvider.tsx  WirelessConnectionDialog.tsx
src/components/ui/: scroll-area.tsx  sidebar.tsx
src/components/views/: AppManager.tsx  DeviceOverview.tsx  FileExplorer.tsx  LogcatViewer.tsx  PerformanceMonitor.tsx  ScreenControl.tsx  ShellTerminal.tsx  SystemInfo.tsx
src/components/views/settings/: AndroidSettings.tsx  AppearanceSettings.tsx  DeviceSettings.tsx  FileSettings.tsx  (+2 more)
src/hooks/: use-window.ts  useAppSettings.ts  useDeviceDataQueries.ts  useDeviceDiscovery.ts  useDeviceQueries.ts  useEmulators.ts  usePairedDevices.ts  useSystemInfo.ts
src/lib/: query-client.ts  settings-schema.ts  wireless-pairing-schema.ts
src/store/: paired-devices-store.ts  settings-store.ts
src/types/: device.ts  paired-device.ts
src/windows/: main.tsx  settings.css  settings.tsx
(+8 files in other folders)
